added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,48 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML elements build the structure of a webpage and makes navigating easy</li>
+          <li>The head element contains information about the webpage</li>
+          <li>The body element represents the visible content shown to the user</li>
+          <li>The head element contains the metadats for the web application</li>
+          <li>Metadata is data about our webpage that the browser uses to serve our webpage to the user</li>
+        </ul>
+    
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>"cascading style sheets"</li>
+          <li>used to describe the presentation of a website created with HTML</li>
+          <li>used to describe how each element on a webpage is rendered</li>
+        </ul>
+
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch name: creates a new branch and switches to it</li>
+          <li>free open source version control system</li>
+          <li>allows developers to collab on projects without overwriting each other's work</li>
+          <li>is kinda confusing but its ok</li>
+        </ul>
+
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>used to provide logic and interactivity for websites</li>
+          <li>I sitll don't know that much about JavaScript</li>
+        </ul>
+
+      </section>
     </main>
 
     <footer>
