added CSS to projec

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -30,6 +31,8 @@
           <li>"cascading style sheets"</li>
           <li>used to describe the presentation of a website created with HTML</li>
           <li>used to describe how each element on a webpage is rendered</li>
+          <li>a margin indicates how much space we want around the outside of an element</li>
+          <li>a padding indicates how much space we want around the content inside an element</li>
         </ul>
 
       </section>
