--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <ul>
           <li>used to provide logic and interactivity for websites</li>
           <li>I sitll don't know that much about JavaScript</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
 
       </section>
